# test_task_for_secunda

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  fastapi.db  pyproject.toml  start-development.sh  start.sh
alembic/: env.py
alembic/versions/: 424d26e7f64a_init_models.py
app/: main.py
app/api/: routers.py  utils.py
app/api/endpoints/: __init__.py  activity.py  building.py  organization.py  user.py
app/core/: base.py  config.py  db.py  init_db.py  user.py
app/crud/: __init__.py  activity.py  base.py  building.py  organization.py
app/models/: __init__.py  activity.py  building.py  organization.py  phone.py  user.py
app/schemas/: activity.py  building.py  organization.py  phone.py  user.py
